# DAO-ZK-Voting

./: Anchor.toml  README.md
app/: package-lock.json  package.json
app/context/: dao-votingIDL.ts  transactions.ts
app/pages/: _app.tsx  index.tsx
app/pages/components/: ConnectWallet.tsx  Create.tsx  GlobalContext.tsx
programs/dao-voting/: Cargo.toml
programs/dao-voting/src/: error.rs  lib.rs  state.rs
programs/dao-voting/src/instructions/: create_proposal.rs  reward_participation.rs  vote.rs
tests/: dao-voting.ts
